# PenaltyMarket

./: README.md
amm-markets/: Anchor.toml  README.md
amm-markets/scripts/: bootstrap-fixture.mjs  lib.mjs  settle-fixture-demo.mjs  withdraw-liquidity.mjs
docs/: .gitbook.yaml  README.md  SUMMARY.md  technical-documentation.md
docs/.gitbook/: vars.yaml
docs/architecture/: market-lifecycle.md  system-overview.md
docs/contracts/: amm-contract.md  current-escrow.md  settlement-model.md
docs/demo/: demo-guide.md
docs/frontend/: api-routes.md  application-flow.md
docs/getting-started/: demo-scope.md  product-overview.md
docs/operations/: deployment.md  keeper-scripts.md
docs/roadmap/: next-steps.md
docs/txline/: data-feeds.md  validation-strategy.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: bet-dialog.tsx  bet-ticket.tsx  claim-button.tsx  coming-soon-overlay.tsx  confirmation-toast.tsx  global-loader.tsx  live-event-feed.tsx  live-match-scoreboard.tsx  live-score.tsx  (+7 more)
world-cup-markets/: Anchor.toml  package-lock.json
world-cup-markets/programs/world-cup-markets/: Cargo.toml
world-cup-markets/programs/world-cup-markets/src/: errors.rs  lib.rs  state.rs
world-cup-markets/programs/world-cup-markets/src/instructions/: buy_position.rs  claim_position.rs  claim_winnings.rs  fund_market.rs  initialize_market.rs  mod.rs  place_bet.rs  refund_position.rs  resolve_market.rs  resolve_market_demo.rs  update_market_close_time.rs  withdraw_liquidity.rs
(+38 files in other folders)
