[package]
name = "world-cup-markets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "world_cup_markets"

[dependencies]
anchor-lang = { version = "=1.1.2", features = ["init-if-needed"] }
anchor-spl = { version = "=1.1.2", features = ["token", "idl-build"] }

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
